externals/tecio/teciosrc/TECIO.h

EXTERNC tecio_API int32_t tecDataSetGetNumZones(
    void*    fileHandle,
    int32_t* numZones);
EXTERNC tecio_API int32_t tecDataSetGetTitle(
    void*  fileHandle,
    char** title);
EXTERNC tecio_API int32_t tecFileGetType(
    void*    fileHandle,
    int32_t* fileType);
EXTERNC tecio_API int32_t tecFileReaderClose(
    void** fileHandle);
EXTERNC tecio_API int32_t tecFileReaderOpen(
    char const* fileName,
    void**      fileHandle);
EXTERNC tecio_API int32_t tecGeomArrowheadGetAngle(
    void*   fileHandle,
    int32_t geom,
    double* angle);
EXTERNC tecio_API int32_t tecGeomArrowheadGetAttach(
    void* fileHandle,
    int32_t geom,
    int32_t* attachment);
EXTERNC tecio_API int32_t tecGeomArrowheadGetSize(
    void*   fileHandle,
    int32_t geom,
    double* arrowheadSize);
EXTERNC tecio_API int32_t tecGeomArrowheadGetStyle(
    void*    fileHandle,
    int32_t  geom,
    int32_t* arrowheadStyle);
EXTERNC tecio_API int32_t tecGeomCircleGetRadius(
    void*   fileHandle,
    int32_t geom,
    double* radius);
EXTERNC tecio_API int32_t tecGeomEllipseGetNumPoints(
    void*    fileHandle,
    int32_t  geom,
    int32_t* numEllipsePoints);
EXTERNC tecio_API int32_t tecGeomEllipseGetSize(
    void*   fileHandle,
    int32_t geom,
    double* horizontalAxis,
    double* verticalAxis);
EXTERNC tecio_API int32_t tecGeomGetAnchorPos(
    void*   fileHandle,
    int32_t geom,
    double* x,
    double* y,
    double* z);
EXTERNC tecio_API int32_t tecGeomGetClipping(
    void*    fileHandle,
    int32_t  geom,
    int32_t* clipping);
EXTERNC tecio_API int32_t tecGeomGetColor(
    void*    fileHandle,
    int32_t  geom,
    int32_t* color);
EXTERNC tecio_API int32_t tecGeomGetCoordMode(
    void*    fileHandle,
    int32_t  geom,
    int32_t* coordMode);
EXTERNC tecio_API int32_t tecGeomGetFillColor(
    void*    fileHandle,
    int32_t  geom,
    int32_t* fillColor);
EXTERNC tecio_API int32_t tecGeomGetLinePattern(
    void*    fileHandle,
    int32_t  geom,
    int32_t* linePattern);
EXTERNC tecio_API int32_t tecGeomGetLineThickness(
    void*   fileHandle,
    int32_t geom,
    double* lineThickness);
EXTERNC tecio_API int32_t tecGeomGetMacroFunctionCmd(
    void*   fileHandle,
    int32_t geom,
    char**  macroFunctionCmd);
EXTERNC tecio_API int32_t tecGeomGetNumGeoms(
    void*    fileHandle,
    int32_t* numGeoms);
EXTERNC tecio_API int32_t tecGeomGetPatternLength(
    void*   fileHandle,
    int32_t geom,
    double* patternLength);
EXTERNC tecio_API int32_t tecGeomGetScope(
    void*    fileHandle,
    int32_t  geom,
    int32_t* scope);
EXTERNC tecio_API int32_t tecGeomGetType(
    void*    fileHandle,
    int32_t  geom,
    int32_t* type);
EXTERNC tecio_API int32_t tecGeomGetZone(
    void*    fileHandle,
    int32_t  geom,
    int32_t* zone);
EXTERNC tecio_API int32_t tecGeomIsAttached(
    void*    fileHandle,
    int32_t  geom,
    int32_t* isAttached);
EXTERNC tecio_API int32_t tecGeomIsFilled(
    void*    fileHandle,
    int32_t  geom,
    int32_t* isFilled);
EXTERNC tecio_API int32_t tecGeomLineGetPoint(
    void*   fileHandle,
    int32_t geom,
    int32_t segment,
    int32_t index,
    double* x,
    double* y,
    double* z);
EXTERNC tecio_API int32_t tecGeomLineGetSegmentCount(
    void*    fileHandle,
    int32_t  geom,
    int32_t* segmentCount);
EXTERNC tecio_API int32_t tecGeomLineSegmentGetPointCount(
    void*    fileHandle,
    int32_t  geom,
    int32_t  segment,
    int32_t* pointCount);
EXTERNC tecio_API int32_t tecGeomRectangleGetSize(
    void*   fileHandle,
    int32_t geom,
    double* width,
    double* height);
EXTERNC tecio_API int32_t tecGeomSquareGetSize(
    void*   fileHandle,
    int32_t geom,
    double* size);
EXTERNC tecio_API void tecStringFree(
    char** string);
EXTERNC tecio_API int32_t tecStringLength(
    char const* string);