externals/tecio/teciosrc/tecio.f90


integer(c_int32_t) function tecDataSetGetNumZones( &
  fileHandle, &
  numZones) &
  bind (c, name="tecDataSetGetNumZones")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)  :: fileHandle
  integer(c_int32_t), intent(out) :: numZones
end function tecDataSetGetNumZones

integer(c_int32_t) function tecDataSetGetTitle( &
  fileHandle, &
  title) &
  bind (c, name="tecDataSetGetTitle")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in) :: fileHandle
  type(c_ptr), intent(out)       :: title
end function tecDataSetGetTitle

integer(c_int32_t) function tecFileGetType( &
  fileHandle, &
  fileType) &
  bind (c, name="tecFileGetType")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)  :: fileHandle
  integer(c_int32_t), intent(out) :: fileType
end function tecFileGetType

integer(c_int32_t) function tecFileReaderClose( &
  fileHandle) &
  bind (c, name="tecFileReaderClose")
  use iso_c_binding
  implicit none
  type(c_ptr), intent(inout) :: fileHandle
end function tecFileReaderClose

integer(c_int32_t) function tecFileReaderOpen( &
  fileName, &
  fileHandle) &
  bind (c, name="tecFileReaderOpen")
  use iso_c_binding
  implicit none
  character(c_char), intent(in) :: fileName(*)
  type(c_ptr), intent(out)      :: fileHandle
end function tecFileReaderOpen

integer(c_int32_t) function tecGeomArrowheadGetAngle( &
  fileHandle, &
  geom, &
  angle) &
  bind (c, name="tecGeomArrowheadGetAngle")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: angle
end function tecGeomArrowheadGetAngle

integer(c_int32_t) function tecGeomArrowheadGetAttach( &
  fileHandle, &
  geom, &
  attachment) &
  bind (c, name="tecGeomArrowheadGetAttach")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: attachment
end function tecGeomArrowheadGetAttach

integer(c_int32_t) function tecGeomArrowheadGetSize( &
  fileHandle, &
  geom, &
  arrowheadSize) &
  bind (c, name="tecGeomArrowheadGetSize")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: arrowheadSize
end function tecGeomArrowheadGetSize

integer(c_int32_t) function tecGeomArrowheadGetStyle( &
  fileHandle, &
  geom, &
  arrowheadStyle) &
  bind (c, name="tecGeomArrowheadGetStyle")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: arrowheadStyle
end function tecGeomArrowheadGetStyle

integer(c_int32_t) function tecGeomCircleGetRadius( &
  fileHandle, &
  geom, &
  radius) &
  bind (c, name="tecGeomCircleGetRadius")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: radius
end function tecGeomCircleGetRadius

integer(c_int32_t) function tecGeomEllipseGetNumPoints( &
  fileHandle, &
  geom, &
  numEllipsePoints) &
  bind (c, name="tecGeomEllipseGetNumPoints")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: numEllipsePoints
end function tecGeomEllipseGetNumPoints

integer(c_int32_t) function tecGeomEllipseGetSize( &
  fileHandle, &
  geom, &
  horizontalAxis, &
  verticalAxis) &
  bind (c, name="tecGeomEllipseGetSize")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: horizontalAxis
  real(c_double), intent(out)           :: verticalAxis
end function tecGeomEllipseGetSize

integer(c_int32_t) function tecGeomGetAnchorPos( &
  fileHandle, &
  geom, &
  x, &
  y, &
  z) &
  bind (c, name="tecGeomGetAnchorPos")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: x
  real(c_double), intent(out)           :: y
  real(c_double), intent(out)           :: z
end function tecGeomGetAnchorPos

integer(c_int32_t) function tecGeomGetClipping( &
  fileHandle, &
  geom, &
  clipping) &
  bind (c, name="tecGeomGetClipping")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: clipping
end function tecGeomGetClipping

integer(c_int32_t) function tecGeomGetColor( &
  fileHandle, &
  geom, &
  color) &
  bind (c, name="tecGeomGetColor")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in) :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out) :: color
end function tecGeomGetColor

integer(c_int32_t) function tecGeomGetCoordMode( &
  fileHandle, &
  geom, &
  coordMode) &
  bind (c, name="tecGeomGetCoordMode")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in) :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out) :: coordMode
end function tecGeomGetCoordMode

integer(c_int32_t) function tecGeomGetFillColor( &
  fileHandle, &
  geom, &
  fillColor) &
  bind (c, name="tecGeomGetFillColor")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: fillColor
end function tecGeomGetFillColor

integer(c_int32_t) function tecGeomGetLinePattern( &
  fileHandle, &
  geom, &
  linePattern) &
  bind (c, name="tecGeomGetLinePattern")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: linePattern
end function tecGeomGetLinePattern

integer(c_int32_t) function tecGeomGetLineThickness( &
  fileHandle, &
  geom, &
  lineThickness) &
  bind (c, name="tecGeomGetLineThickness")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: lineThickness
end function tecGeomGetLineThickness

integer(c_int32_t) function tecGeomGetMacroFunctionCmd( &
  fileHandle, &
  geom, &
  macroFunctionCmd) &
  bind (c, name="tecGeomGetMacroFunctionCmd")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  type(c_ptr), intent(out)              :: macroFunctionCmd
end function tecGeomGetMacroFunctionCmd

integer(c_int32_t) function tecGeomGetNumGeoms( &
  fileHandle, &
  numGeoms) &
  bind (c, name="tecGeomGetNumGeoms")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)  :: fileHandle
  integer(c_int32_t), intent(out) :: numGeoms
end function tecGeomGetNumGeoms

integer(c_int32_t) function tecGeomGetPatternLength( &
  fileHandle, &
  geom, &
  patternLength) &
  bind (c, name="tecGeomGetPatternLength")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: patternLength
end function tecGeomGetPatternLength

integer(c_int32_t) function tecGeomGetScope( &
  fileHandle, &
  geom, &
  scope) &
  bind (c, name="tecGeomGetScope")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: scope
end function tecGeomGetScope

integer(c_int32_t) function tecGeomGetType( &
  fileHandle, &
  geom, &
  type) &
  bind (c, name="tecGeomGetType")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: type
end function tecGeomGetType

integer(c_int32_t) function tecGeomGetZone( &
  fileHandle, &
  geom, &
  zone) &
  bind (c, name="tecGeomGetZone")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: zone
end function tecGeomGetZone

integer(c_int32_t) function tecGeomIsAttached( &
  fileHandle, &
  geom, &
  isAttached) &
  bind (c, name="tecGeomIsAttached")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in) :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out) :: isAttached
end function tecGeomIsAttached

integer(c_int32_t) function tecGeomIsFilled( &
  fileHandle, &
  geom, &
  isFilled) &
  bind (c, name="tecGeomIsFilled")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: isFilled
end function tecGeomIsFilled

integer(c_int32_t) function tecGeomLineGetPoint( &
  fileHandle, &
  geom, &
  segment, &
  index, &
  x, &
  y, &
  z) &
  bind (c, name="tecGeomLineGetPoint")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), value, intent(in) :: segment
  integer(c_int32_t), value, intent(in) :: index
  real(c_double), intent(out)           :: x
  real(c_double), intent(out)           :: y
  real(c_double), intent(out)           :: z
end function tecGeomLineGetPoint

integer(c_int32_t) function tecGeomLineGetSegmentCount( &
  fileHandle, &
  geom, &
  segmentCount) &
  bind (c, name="tecGeomLineGetSegmentCount")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), intent(out)       :: segmentCount
end function tecGeomLineGetSegmentCount

integer(c_int32_t) function tecGeomLineSegmentGetPointCount( &
  fileHandle, &
  geom, &
  segment, &
  pointCount) &
  bind (c, name="tecGeomLineSegmentGetPointCount")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  integer(c_int32_t), value, intent(in) :: segment
  integer(c_int32_t), intent(out)       :: pointCount
end function tecGeomLineSegmentGetPointCount

integer(c_int32_t) function tecGeomRectangleGetSize( &
  fileHandle, &
  geom, &
  width, &
  height) &
  bind (c, name="tecGeomRectangleGetSize")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: width
  real(c_double), intent(out)           :: height
end function tecGeomRectangleGetSize

integer(c_int32_t) function tecGeomSquareGetSize( &
  fileHandle, &
  geom, &
  size) &
  bind (c, name="tecGeomSquareGetSize")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: geom
  real(c_double), intent(out)           :: size
end function tecGeomSquareGetSize

subroutine tecStringFree( &
  string) &
  bind (c, name="tecStringFree")
  use iso_c_binding
  implicit none
  type(c_ptr), intent(inout) :: string
end subroutine tecStringFree

integer(c_int32_t) function tecStringLength( &
  string) &
  bind(c, name = "tecStringLength")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in) :: string
  end function tecStringLength
